style tweaks to fix overflow issues for VouchersStep card

--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -8,4 +8,10 @@
       margin-top: 0;
     }
   }
+  &__col {
+    @media screen and (max-width: $mobileWidth) {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  }
 }
